15-10-2015: 2.1.6
	enhancement: Lsyncd now locks its pidfile
	enhancement: added ssh.identifyFile and ssh.options options
	enhancement: added rsync inplace option
	fix: ignore blank lines and rsync commenits in exclude files (David Reiss)
	fix: don't tread exclude lines with embedded "+" chars as inclusions (David Reiss)
	fix: crash when debugging inotify (Michael Ploujnikov)
	fix: fixed Finished/Retrying error messages being swapped around (Jun Saito)
	fix: properly encapsulate filenames on ssh mv commands to avoid shell command injections.
	fix: postcmd example (Timo Teräs)
	change: closes also on INT signals
	change: now removes its pidfile on INT and TERM signals
	change: changed build system from autotools to cmake

07-06-2013: 2.1.5
	enhancement: Added rsync options: bwlimit, timeout
	fix: Specifying ssh port no longer overwrites the last rsync option
	fix: rsync option password_file is now accepted
	fix: onAttrib is accepted again
	fix: -log Exec now prints now fully all arguments
	fix: configure script lua detection now includes math lib to workaround
	     wrongly created "needs COMPAT_ALL" messages.
	fix: repaired variable replacement for layer 3 scripts
	fix: config.delay is now checked to a number >= 0
	change: a2x is no longer checked by configure script.
			should not be needed when building from tarball

24-11-2012: 2.1.4
	fix: making ssh custom port changes work with ssh and rsync

23-11-2012: 2.1.3
	fix: fixed 2 crash conditions due to failure to read 'uSettings'

03-11-2012: 2.1.2
	fix: added excludeFrom to checkgauge (thx to DavidWittman)
	fix: fixed rsync option computation
	enhancement: added password_file file option to rsync

27-10-2012: 2.1.1
	fix: fix rsync.rsh, rsync.rsync_path, rsync.tmp_dir, rsync._extra parameters
		 thanks go to Birger Schmidt for this fix.

23-10-2012: 2.1.0
	fix: fail startup if settings.inist is false and one of the target hosts fails